[Property wrappers] Validate wrappedValue before using it.

Fixes SR-10984.