lib/Sema/CodeSynthesis.cpp
@@ -1601,6 +1601,7 @@ PropertyWrapperBackingPropertyInfoRequest::evaluate(Evaluator &evaluator,
   if (!var->hasInterfaceType()) {
     auto &tc = *static_cast<TypeChecker *>(ctx.getLazyResolver());
     tc.validateDecl(var);
+    assert(var->hasInterfaceType());
   }
 
   // Make sure that the property type matches the value of the
